syntax = "proto3";

package admin.v1;

import "buf/validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
//import "google/protobuf/timestamp.proto";
//import "validate/validate.proto"; use buf first
option go_package = "github.com/fzf-labs/ai-boilerplate-backend/api/admin/v1;v1";

//配置管理
service ConfigDatum {
  //配置管理-创建一条数据
  rpc CreateConfigDatum(CreateConfigDatumReq) returns (CreateConfigDatumReply) {
    option (google.api.http) = {
      post: "/admin/v1/config_data/create"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //配置管理-更新一条数据
  rpc UpdateConfigDatum(UpdateConfigDatumReq) returns (UpdateConfigDatumReply) {
    option (google.api.http) = {
      post: "/admin/v1/config_data/update"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //配置管理-更新状态
  rpc UpdateConfigDatumStatus(UpdateConfigDatumStatusReq) returns (UpdateConfigDatumStatusReply) {
    option (google.api.http) = {
      post: "/admin/v1/config_data/update/status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //配置管理-删除一条数据
  rpc DeleteConfigDatum(DeleteConfigDatumReq) returns (DeleteConfigDatumReply) {
    option (google.api.http) = {
      post: "/admin/v1/config_data/delete"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //配置管理-单条数据查询
  rpc GetConfigDatumInfo(GetConfigDatumInfoReq) returns (GetConfigDatumInfoReply) {
    option (google.api.http) = {get: "/admin/v1/config_data/info"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
  //配置管理-列表数据查询
  rpc GetConfigDatumList(GetConfigDatumListReq) returns (GetConfigDatumListReply) {
    option (google.api.http) = {get: "/admin/v1/config_data/list"};
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      parameters: {
        headers: {
          name: "Authorization"
          description: "Bearer Token"
          type: STRING
          required: true
        }
      }
    };
  }
}
//配置管理信息
message ConfigDatumInfo {
  string id = 1; // id
	string name = 2; // 名称
	string key = 3; // 健
	string value = 4; // 值
	string remark = 5; // 备注
	int32 status = 6; // 状态
	string createdAt = 7; // 创建时间
	string updatedAt = 8; // 更新时间
}

//请求-配置管理-创建一条数据
message CreateConfigDatumReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["name","key","status"]
    }
  };
  string name = 1 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 名称
	string key = 2 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 健
	string value = 3 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 值
	string remark = 4 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 255}]; // 备注
	int32 status = 5 ; // 状态
}

//响应-配置管理-创建一条数据
message CreateConfigDatumReply {
  	string id = 1; // id
}

//请求-配置管理-更新一条数据
message UpdateConfigDatumReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","name","key","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	string name = 2 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 名称
	string key = 3 [(buf.validate.field).string={min_len: 1, max_len: 64}]; // 健
	string value = 4 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1}]; // 值
	string remark = 5 [(buf.validate.field).ignore=IGNORE_IF_UNPOPULATED,(buf.validate.field).string={min_len: 1, max_len: 255}]; // 备注
	int32 status = 6 ; // 状态
}

//响应-配置管理-更新一条数据
message UpdateConfigDatumReply {}

//请求-配置管理-更新状态
message UpdateConfigDatumStatusReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id","status"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
	int32 status = 2 ; // 状态
}

//响应-配置管理-更新状态
message UpdateConfigDatumStatusReply {}

//请求-配置管理-删除一条数据
message DeleteConfigDatumReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-配置管理-删除一条数据
message DeleteConfigDatumReply {}

//请求-配置管理-单条数据查询
message GetConfigDatumInfoReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: ["id"]
    }
  };
  string id = 1 [(buf.validate.field).string={min_len: 1, max_len: 128}]; // id
}

//响应-配置管理-单条数据查询
message GetConfigDatumInfoReply {
  ConfigDatumInfo info = 1;
}

//请求-配置管理-列表数据查询
message GetConfigDatumListReq {
  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_schema) = {
    json_schema: {
      required: [
        "page",
        "pageSize"
      ]
    }
  };
  int32 page = 1[(buf.validate.field).int32={gte: 1}]; //页码
  int32 pageSize = 2[(buf.validate.field).int32={gte: 1, lte: 1000}]; //页数
}

//响应-配置管理-列表数据查询
message GetConfigDatumListReply {
  int32 total = 1; //总数
  repeated ConfigDatumInfo list = 2; // 列表数据
}

